--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div id="main"></div>
+    <script src="/scripts/socket.io-client/socket.io.js"></script>
     <script src="/scripts/main.js"></script>
   </body>
 </html>
