--- a/src/index.html
+++ b/src/index.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/png" href="/assets/images/favicon.png">
     <link rel="stylesheet" href="/stylesheets/main.css" type="text/css" />
     <title></title>
   </head>
   <body>
     <div id="main"></div>
-    <script src="/scripts/socket.io-client/socket.io.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
     <script src="/scripts/main.js"></script>
   </body>
 </html>
