--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/png" href="/assets/images/favicon.png">
     <link rel="stylesheet" href="/stylesheets/main.css" type="text/css" />
-    <title></title>
+    <title>much discussion</title>
   </head>
   <body>
     <div id="main"></div>
